# codecad

./: .gitignore  .luarc.json  404.html  CMakeLists.txt  CNAME  CRUSH.md  Dockerfile.doc  Makefile  README.md  TODO.md  index.html  mkdocs.yml  refactor.md  sitemap.xml
app/: CMakeLists.txt
app/inc/: App.hpp  BridgeTypes.hpp  Controller.hpp  Paths.hpp  ProjectPanel.hpp  RenderBridge.hpp  Utils.hpp
app/src/: App.cpp  Controller.cpp  Paths.cpp  ProjectPanel.cpp  RenderBridge.cpp  Utils.cpp  main.cpp
apps/cli/: CMakeLists.txt
apps/cli/inc/: App.hpp  Controller.hpp  FileWatcher.hpp  Project.hpp  ProjectPanel.hpp
apps/cli/src/: App.cpp  Controller.cpp  Project.cpp  ProjectPanel.cpp
apps/lab/: CMakeLists.txt
apps/lab/inc/: App.hpp  CupScenario.hpp  CurveScenario.hpp  FilletScenario.hpp  GearScenario.hpp  PoissonScenario.hpp  Scenario.hpp
apps/lab/src/: App.cpp  CupScenario.cpp  CurveScenario.cpp  FilletScenario.cpp  PoissonScenario.cpp  Scenario.cpp  ThreadScenario.cpp  main.cpp
core/: CMakeLists.txt
core/inc/ccad/common/: Logger.hpp
core/inc/ccad/geom/: IShape.hpp  Primitives.hpp  Shape.hpp
core/inc/core/: CoreEngine.hpp  LuaEngine.hpp  Viewer.hpp
core/inc/core/geo/: Boolean.hpp  Draft.hpp  Features.hpp  Measure.hpp  Triangulate.hpp
core/inc/core/geometry/: Boolean.hpp  Draft.hpp  Extrude.hpp  Features.hpp  Gear.hpp  Measure.hpp  Primitives.hpp  Shape.hpp  Sketch.hpp  Transform.hpp  Triangulate.hpp
core/inc/core/io/: Export.hpp  Paths.hpp  Project.hpp
core/inc/core/mech/: CoarseThread.hpp  Gear.hpp  PipeTransition.hpp  Thread.hpp  ThreadChamfer.hpp  ThreadOps.hpp  ThreadSpec.hpp
core/inc/core/runtime/: Assembly.hpp  BindAssembly.hpp  BindConstruct.hpp  BindIO.hpp  BindPrimitives.hpp  BindingUtils.hpp  LuaBindings.hpp  SolConfig.hpp
core/src/: Bom.cpp  Boolean.cpp  CoarseThread.cpp  CoreEngine.cpp  Draft.cpp  Export.cpp  Extrude.cpp  Features.cpp  Gear.cpp  LuaEngine.cpp  Manifest.cpp  Measure.cpp  Paths.cpp  PipeTransition.cpp  Primitives.cpp  Project.cpp  Sketch.cpp  Thread.cpp  ThreadChamfer.cpp  ThreadOps.cpp  Transform.cpp  Triangulate.cpp
core/src/lua/: BindAssembly.cpp  BindBooleans.cpp  BindConstruct.cpp  BindFeatures.cpp  BindGears.cpp  BindIO.cpp  BindMeasure.cpp  BindPrimitives.cpp  BindSketch.cpp  BindThreads.cpp  BindTransforms.cpp
cosma/: CMakeLists.txt
cosma/inc/cosma/: CosmaApplication.hpp  CosmaController.hpp  CosmaMain.hpp  CosmaViewer.hpp
cosma/inc/cosma/components/: PhysicsComponent.hpp  RigidBodyComponent.hpp
cosma/inc/cosma/core/: Application.hpp  Bounds.hpp  Camera.hpp  CameraOrbit.hpp  CameraPath.hpp  DirectionalLight.hpp  Engine.hpp  FileWatcher.hpp  InputHandler.hpp  Light.hpp  RenderEngine.hpp  Renderer.hpp  Texture.hpp  Transform.hpp  Window.hpp
cosma/inc/cosma/geometry/: BaseGeometry.hpp  LineSet.hpp  Mesh.hpp  PointCloud.hpp  Vertex.hpp
cosma/inc/cosma/io/: Stl.hpp
cosma/inc/cosma/material/: Color.hpp  FlatShadedMaterial.hpp  InfinityGridMaterial.hpp  LineSetMaterial.hpp  Material.hpp  Shader.hpp
cosma/inc/cosma/physics/core/: PhysicsWorld.hpp  RigidBody.hpp
cosma/inc/cosma/scene/: ArrowNode.hpp  AxesNode.hpp  BoxNode.hpp  ConeNode.hpp  CylinderNode.hpp  GridNode.hpp  ImageNode.hpp  InfinityGridNode.hpp  LandscapeNode.hpp  MeshNode.hpp  Renderable.hpp  Scene.hpp  SceneNode.hpp  ShapeNode.hpp  SphereNode.hpp  TriangleNode.hpp
cosma/inc/cosma/ui/: GuiLayer.hpp
cosma/src/: ArrowNode.cpp  AxesNode.cpp  BaseGeometry.cpp  Bounds.cpp  BoxNode.cpp  CameraOrbit.cpp  CameraPath.cpp  ConeNode.cpp  CosmaApplication.cpp  CosmaController.cpp  CosmaMain.cpp  CosmaViewer.cpp  CylinderNode.cpp  DirectionalLight.cpp  Engine.cpp  FlatShadedMaterial.cpp  GridNode.cpp  GuiLayer.cpp  ImageNode.cpp  InfinityGridMaterial.cpp  InfinityGridNode.cpp  LandscapeNode.cpp  LineSet.cpp  LineSetMaterial.cpp  Mesh.cpp  MeshNode.cpp  PhysicsWorld.cpp  PointCloud.cpp  RenderEngine.cpp  Renderable.cpp  Renderer.cpp  RigidBody.cpp  RigidBodyComponent.cpp  Scene.cpp  SceneNode.cpp  Shader.cpp  ShapeNode.cpp  SphereNode.cpp  Stl.cpp  Texture.cpp  (+2 more)
libs/kernel/: CMakeLists.txt
libs/kernel/inc/ccad/base/: Exception.hpp  (+5 more)
libs/kernel/inc/internal/: MathHelper.hpp  version.hpp.in
libs/kernel/src/: Chamfer.cpp  CurvedPlate.cpp  Curves.cpp  Dxf.cpp  EdgeSelector.cpp  Export.cpp  Extrude.cpp  Fillet.cpp  Logger.cpp  OcctShape.cpp  Operations.cpp  PipeAdapter.cpp  Poisson.cpp  PoissonDisk.cpp  Primitives.cpp  Rectangle.cpp  Revolve.cpp  Rod.cpp  Section.cpp  SketchProfiles.cpp  Threads.cpp  Triangulation.cpp
libs/kernel/tests/: CMakeLists.txt  TestMech.cpp  TestOperations.cpp  TestShapes.cpp  TestTriMesh.cpp
libs/lua/: CMakeLists.txt
libs/lua/src/: BindBooleans.cpp  BindConstruct.cpp  BindCurves.cpp  BindDraft.cpp  BindFeatures.cpp  BindIO.cpp  BindMeasure.cpp  BindMech.cpp  BindPipes.cpp  BindPrimitives.cpp  BindSelect.cpp  BindSketch.cpp  BindThreads.cpp  BindTransforms.cpp  BindingUtils.cpp  Bom.cpp  LuaEngine.cpp  PrettyLuaError.cpp
libs/lua/tests/: CMakeLists.txt  TestBasic.cpp
libs/pure/: CMakeLists.txt
libs/pure/inc/pure/: IPureCamera.hpp  IPurePickProvider.hpp  IPurePicker.hpp  PureAxis.hpp  PureController.hpp  PureGui.hpp  PureMath.hpp  PureMeasurement.hpp  PureMesh.hpp  PurePerspectiveCamera.hpp  PurePicker.hpp  PureRenderArea.hpp  PureRenderer.hpp  PureScene.hpp  PureTypes.hpp
libs/pure/src/: PureController.cpp  PureGui.cpp  PureMath.cpp  PureMeasurement.cpp  PureMesh.cpp  PurePerspectiveCamera.cpp  PurePicker.cpp  PureRenderArea.cpp  PureRenderer.cpp  PureScene.cpp
pure/: CMakeLists.txt
pure/inc/pure/: IPureCamera.hpp  PureAxis.hpp  PureBounds.hpp  PureCamera.hpp  PureController.hpp  PureGui.hpp  PureInputHandler.hpp  PureMesh.hpp  PureMeshFactory.hpp  PureOrthoCamera.hpp  PurePerspectiveCamera.hpp  PureRenderer.hpp  PureScene.hpp  PureShader.hpp
pure/src/: PureAxis.cpp  PureCamera.cpp  PureController.cpp  PureGui.cpp  PureMesh.cpp  PureMeshFactory.cpp  PureOrthoCamera.cpp  PurePerspectiveCamera.cpp  PureRenderer.cpp  PureScene.cpp  PureShader.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp  test_shapes.cpp
(+304 files in other folders)
